--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "hardhat": "^2.24.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^5.3.0"
   }
 }
